# s2t_pl

./: .gitignore  README.md  pyproject.toml
conf/: config.yaml
conf/callbacks/: default_callbacks.yaml
conf/data/: default_data.yaml
conf/logger/: wandb_logger.yaml
conf/module/: default_module.yaml
conf/trainer/: config.yaml  default_trainer.yaml
src/: datamodules.py  models.py  mustcv2_dataset.py  train.py
src/utils/: split_wavs.py
