[tool.poetry]
name = "s2t_transformers_pl"
version = "0.1.0"
description = ""
authors = ["cromz22 <tt.pfr4343@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
torch = "^1.10.2"
transformers = "^4.17.0"
pytorch-lightning = "^1.5.10"
wandb = "^0.12.11"
hydra-core = "^1.1.1"
SoundFile = "^0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
